New API create hospital's staff
